bugfix windows scrollbar

--- a/source/sass/blocks/starships.scss
+++ b/source/sass/blocks/starships.scss
@@ -73,8 +73,15 @@
 }
 
 .starships__table-wrapper {
-  overflow-x: scroll;
+  overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   margin-top: 50px;
+
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
 
   @include vp-768 {
     margin-top: 20px;
